<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <EditText
        android:id="@+id/editTextOne"
        android:layout_width="211dp"
        android:layout_height="34dp"
        android:layout_marginTop="144dp"
        android:ems="10"
        android:gravity="center"
        android:hint="Enter word here"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.845"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/field"
        android:layout_width="112dp"
        android:layout_height="34dp"
        android:layout_marginTop="144dp"
        android:fontFamily="@font/quicksand_medium"
        android:gravity="center"
        android:text="@string/nounOne"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/field7"
        android:layout_width="112dp"
        android:layout_height="34dp"
        android:layout_marginTop="416dp"
        android:fontFamily="@font/quicksand_medium"
        android:gravity="center"
        android:text="@string/adverb"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/field6"
        android:layout_width="112dp"
        android:layout_height="34dp"
        android:layout_marginTop="372dp"
        android:fontFamily="@font/quicksand_medium"
        android:gravity="center"
        android:text="@string/verbTwo"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/field5"
        android:layout_width="112dp"
        android:layout_height="34dp"
        android:layout_marginTop="328dp"
        android:fontFamily="@font/quicksand_medium"
        android:gravity="center"
        android:text="@string/verbOne"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/field4"
        android:layout_width="112dp"
        android:layout_height="34dp"
        android:layout_marginTop="280dp"
        android:fontFamily="@font/quicksand_medium"
        android:gravity="center"
        android:text="@string/adjectiveTwo"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/field3"
        android:layout_width="112dp"
        android:layout_height="34dp"
        android:layout_marginTop="236dp"
        android:fontFamily="@font/quicksand_medium"
        android:gravity="center"
        android:text="@string/adjectiveOne"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/field2"
        android:layout_width="112dp"
        android:layout_height="34dp"
        android:layout_marginTop="192dp"
        android:fontFamily="@font/quicksand_medium"
        android:gravity="center"
        android:text="@string/nounTwo"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextSeven"
        android:layout_width="211dp"
        android:layout_height="34dp"
        android:layout_marginTop="416dp"
        android:ems="10"
        android:fontFamily="@font/quicksand_medium"
        android:gravity="center"
        android:hint="Enter word here"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.845"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextSix"
        android:layout_width="211dp"
        android:layout_height="34dp"
        android:layout_marginTop="372dp"
        android:ems="10"
        android:fontFamily="@font/quicksand_medium"
        android:gravity="center"
        android:hint="Enter word here"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.845"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextFive"
        android:layout_width="211dp"
        android:layout_height="34dp"
        android:layout_marginTop="328dp"
        android:ems="10"
        android:fontFamily="@font/quicksand_medium"
        android:gravity="center"
        android:hint="Enter word here"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.845"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTwo"
        android:layout_width="211dp"
        android:layout_height="34dp"
        android:layout_marginTop="192dp"
        android:ems="10"
        android:fontFamily="@font/quicksand_medium"
        android:gravity="center"
        android:hint="Enter word here"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.845"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextFour"
        android:layout_width="211dp"
        android:layout_height="34dp"
        android:layout_marginTop="280dp"
        android:ems="10"
        android:fontFamily="@font/quicksand_medium"
        android:gravity="center"
        android:hint="Enter word here"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.845"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextThree"
        android:layout_width="211dp"
        android:layout_height="34dp"
        android:layout_marginTop="236dp"
        android:ems="10"
        android:fontFamily="@font/quicksand_medium"
        android:gravity="center"
        android:hint="Enter word here"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.845"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/idTitle2"
        android:layout_width="227dp"
        android:layout_height="75dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/quicksand_medium"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/title"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="492dp"
        android:text="@string/buttonTwo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>